# openvas-scanner

./: CLAUDE.md  agent-controller-sqlite.py  agent-infrastructure-reference.md  agent-infrastructure-requirements.md
gvm-agent/: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md
gvm-agent/config/: agent.conf.template
gvm-agent/include/: agent.h  auto_update.h  config.h  heartbeat.h  http_client.h  job_processor.h  nasl_executor.h  nvt_feed.h  utils.h
gvm-agent/src/: agent.c  auto_update.c  config.c  heartbeat.c  http_client.c  job_processor.c  main.c  nasl_executor.c  nvt_feed.c  utils.c
